# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  coverage.info
.github/workflows/: ci.yml  linux.yml
_build/: CTestTestfile.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/tests/: CTestTestfile.cmake  check
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/banking/: Account.cpp.func-c.html  Account.cpp.func.html  Account.cpp.gcov.html  Account.h.func-c.html  Account.h.func.html  Account.h.gcov.html  Transaction.cpp.func-c.html  Transaction.cpp.func.html  Transaction.cpp.gcov.html  Transaction.h.func-c.html  Transaction.h.func.html  Transaction.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/tests/: index-sort-f.html  index-sort-l.html  index.html  test_account.cpp.func-c.html  test_account.cpp.func.html  test_account.cpp.gcov.html  test_transaction.cpp.func-c.html  test_transaction.cpp.func.html  test_transaction.cpp.gcov.html
tests/: CMakeLists.txt  test_account.cpp  test_transaction.cpp
